# unlight-zwei-room-service

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.v1  Makefile  README.md  auth_server.go  build.rs  config.test_server.yaml  config.yaml  docker-compose.yaml  genServerPem.go  go.mod  go.sum  main.try2.go  orgin.go  test_run.bat  test_run.sh  test_self.bat  tools.go
build_cli/: auth_server.go  build.bat  room_status.go
cmd/: export.go  import.go  init.go  root.go  run.go
common/: function.go
doc/: message.md  message.proto.dot  service.html  service.md
insecure/: README.md  insecure.go  key.pem
pkg/authServer/: check_cred.go  create_cred.go  db_connect.go  get_cred.go  main_init.go  main_process.go
pkg/cmd/: init.go  root.go  run.go
pkg/common/: function.go  system_message.go
pkg/config/: conftemp.go
pkg/serverCtl/: Broadcast.go  CreateRoom.go  DeleteRoom.go  GetRoomInfo.go  GetRoomList.go  JoinRoom.go  QuitPair.go  QuitRoom.go  RmStatusSvr.go  RoomService.go  RoomStreamBox.go  UpdateCard.go  UpdateRoom.go  main_process.go
pkg/serverCtlNoRedis/: Broadcast.go  CreateRoom.go  GetRoomInfo.go  GetRoomList.go  JoinRoom.go  QuitPair.go  QuitRoom.go  RoomMgr.go  RoomService.go  UpdateCard.go  UpdateRoom.go  main_process.go
pkg/store/: note.md
proto/: GameCtl.pb.go  GameCtl.pb.gw.go  GameCtl.proto  GameCtl.validator.pb.go  common.pb.go  common.proto  common.validator.pb.go  cred.pb.go  cred.pb.gw.go  cred.proto  cred.validator.pb.go  message.pb.go  message.proto  message.validator.pb.go  service.pb.go  service.proto  service.validator.pb.go
(+24 files in other folders)
