[package]
name = "unlight-zwei-room-service"
version = "0.1.0"
authors = ["Steven Cheng<stv.chm@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"



# [[bin]]
# name = "routeguide-server"
# path = "src/routeguide/server.rs"

# [[bin]]
# name = "routeguide-client"
# path = "src/routeguide/client.rs"


[[bin]]
name = "room_service_server"
path = "src/RoomService/server.rs"

# [[bin]]
# name = "room_service_client"
# path = "src/RoomService/client.rs"


[dependencies]
redis = "0.15.1"
tonic = { path = "A:/Gitrepo/tonic/tonic", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"
# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.2.0-alpha", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.6"

[build-dependencies]
tonic-build = { path = "A:/Gitrepo/tonic/tonic-build" }
